--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,7 +54,7 @@ if(BUILD_EXTENSIONS)
 endif()
 
 # ------------------------------------------------------------------------------
-# Package
+# Pack and Install
 # ------------------------------------------------------------------------------
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
