--- a/disabled-workflows/release-with-extensions.yml
+++ b/disabled-workflows/release-with-extensions.yml
@@ -14,12 +14,13 @@ jobs:
     - name: Installing dependencies (APT packages)
       run: |
         sudo apt-get update -y
+        sudo apt-get install -y libsqlite3-dev
         sudo apt-get install -y libcurl4-openssl-dev
         sudo apt-get install -y libmysqlclient-dev
         sudo apt-get install -y libgmp3-dev
-        sudo apt-get install libzmq3-dev
-        sudo apt-get install libleveldb-dev
-        sudo apt-get install libpcre3-dev
+        sudo apt-get install -y libzmq3-dev
+        sudo apt-get install -y libleveldb-dev
+        sudo apt-get install -y libpcre3-dev
     - name: Installing dependency hiredis
       run: |
         git clone https://github.com/redis/hiredis.git
@@ -54,6 +55,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Installing dependencies (Homebrew packages)
       run: |
+        brew install sqlite
         brew install openssl
         brew install fcgi
         brew install mysql-client
@@ -93,6 +95,7 @@ jobs:
         vcpkg integrate install
     - name: Installing dependencies (vcpkg packages)
       run: |
+        vcpkg install sqlite3:x64-windows
         vcpgk install openssl:x64-windows
         vcpkg install curl:x64-windows
         vcpkg install fastcgi:x64-windows
