--- a/extensions/CMakeLists.txt
+++ b/extensions/CMakeLists.txt
@@ -43,6 +43,8 @@ if(APPLE)
     link_directories(/opt/homebrew/opt/leveldb/lib)
     include_directories(/opt/homebrew/opt/openssl/include)
     link_directories(/opt/homebrew/opt/openssl/lib)
+    include_directories(/opt/homebrew/opt/pcre/include)
+    link_directories(/opt/homebrew/opt/pcre/lib)
   else()
     include_directories(/usr/local/opt/mysql-client/include)
     link_directories(/usr/local/opt/mysql-client/lib)
