added uuid extension

--- a/extensions/CMakeLists.txt
+++ b/extensions/CMakeLists.txt
@@ -86,6 +86,10 @@ add_library(crypto_mod SHARED
 add_library(regex_mod SHARED
   regex.c)
 
+add_library(uuid_mod SHARED
+  uuid.c
+  deps/uuid4.c)
+
 target_link_libraries(sqlite_mod    ${STATIC_LIB_TARGET})
 target_link_libraries(curl_mod      ${STATIC_LIB_TARGET})
 target_link_libraries(redis_mod     ${STATIC_LIB_TARGET})
@@ -97,6 +101,7 @@ target_link_libraries(zeromq_mod    ${STATIC_LIB_TARGET})
 target_link_libraries(leveldb_mod   ${STATIC_LIB_TARGET})
 target_link_libraries(crypto_mod    ${STATIC_LIB_TARGET})
 target_link_libraries(regex_mod     ${STATIC_LIB_TARGET})
+target_link_libraries(uuid_mod      ${STATIC_LIB_TARGET})
 
 set_target_properties(sqlite_mod    PROPERTIES PREFIX "")
 set_target_properties(curl_mod      PROPERTIES PREFIX "")
@@ -109,6 +114,7 @@ set_target_properties(zeromq_mod    PROPERTIES PREFIX "")
 set_target_properties(leveldb_mod   PROPERTIES PREFIX "")
 set_target_properties(crypto_mod    PROPERTIES PREFIX "")
 set_target_properties(regex_mod     PROPERTIES PREFIX "")
+set_target_properties(uuid_mod      PROPERTIES PREFIX "")
 
 if(MSVC)
   target_link_libraries(sqlite_mod  PRIVATE SQLite::SQLite3)
