added selectors core module

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -63,34 +63,40 @@ add_library(ini_mod SHARED
   ini.c
   deps/ini.c)
 
-target_link_libraries(math_mod     ${STATIC_LIB_TARGET})
-target_link_libraries(os_mod       ${STATIC_LIB_TARGET})
-target_link_libraries(io_mod       ${STATIC_LIB_TARGET})
-target_link_libraries(numbers_mod  ${STATIC_LIB_TARGET})
-target_link_libraries(strings_mod  ${STATIC_LIB_TARGET})
-target_link_libraries(arrays_mod   ${STATIC_LIB_TARGET})
-target_link_libraries(utf8_mod     ${STATIC_LIB_TARGET})
-target_link_libraries(hashing_mod  ${STATIC_LIB_TARGET})
-target_link_libraries(encoding_mod ${STATIC_LIB_TARGET})
-target_link_libraries(socket_mod   ${STATIC_LIB_TARGET})
-target_link_libraries(json_mod     ${STATIC_LIB_TARGET})
-target_link_libraries(lists_mod    ${STATIC_LIB_TARGET})
-target_link_libraries(ini_mod      ${STATIC_LIB_TARGET})
+add_library(selectors_mod SHARED
+  selectors.c)
+
+target_link_libraries(math_mod      ${STATIC_LIB_TARGET})
+target_link_libraries(os_mod        ${STATIC_LIB_TARGET})
+target_link_libraries(io_mod        ${STATIC_LIB_TARGET})
+target_link_libraries(numbers_mod   ${STATIC_LIB_TARGET})
+target_link_libraries(strings_mod   ${STATIC_LIB_TARGET})
+target_link_libraries(arrays_mod    ${STATIC_LIB_TARGET})
+target_link_libraries(utf8_mod      ${STATIC_LIB_TARGET})
+target_link_libraries(hashing_mod   ${STATIC_LIB_TARGET})
+target_link_libraries(encoding_mod  ${STATIC_LIB_TARGET})
+target_link_libraries(socket_mod    ${STATIC_LIB_TARGET})
+target_link_libraries(json_mod      ${STATIC_LIB_TARGET})
+target_link_libraries(lists_mod     ${STATIC_LIB_TARGET})
+target_link_libraries(ini_mod       ${STATIC_LIB_TARGET})
+target_link_libraries(selectors_mod ${STATIC_LIB_TARGET})
 
 if(WIN32)
   target_link_libraries(socket_mod ws2_32)
+  target_link_libraries(selectors_mod ws2_32)
 endif()
 
-set_target_properties(math_mod     PROPERTIES PREFIX "")
-set_target_properties(os_mod       PROPERTIES PREFIX "")
-set_target_properties(io_mod       PROPERTIES PREFIX "")
-set_target_properties(numbers_mod  PROPERTIES PREFIX "")
-set_target_properties(strings_mod  PROPERTIES PREFIX "")
-set_target_properties(arrays_mod   PROPERTIES PREFIX "")
-set_target_properties(utf8_mod     PROPERTIES PREFIX "")
-set_target_properties(hashing_mod  PROPERTIES PREFIX "")
-set_target_properties(encoding_mod PROPERTIES PREFIX "")
-set_target_properties(socket_mod   PROPERTIES PREFIX "")
-set_target_properties(json_mod     PROPERTIES PREFIX "")
-set_target_properties(lists_mod    PROPERTIES PREFIX "")
-set_target_properties(ini_mod      PROPERTIES PREFIX "")
+set_target_properties(math_mod      PROPERTIES PREFIX "")
+set_target_properties(os_mod        PROPERTIES PREFIX "")
+set_target_properties(io_mod        PROPERTIES PREFIX "")
+set_target_properties(numbers_mod   PROPERTIES PREFIX "")
+set_target_properties(strings_mod   PROPERTIES PREFIX "")
+set_target_properties(arrays_mod    PROPERTIES PREFIX "")
+set_target_properties(utf8_mod      PROPERTIES PREFIX "")
+set_target_properties(hashing_mod   PROPERTIES PREFIX "")
+set_target_properties(encoding_mod  PROPERTIES PREFIX "")
+set_target_properties(socket_mod    PROPERTIES PREFIX "")
+set_target_properties(json_mod      PROPERTIES PREFIX "")
+set_target_properties(lists_mod     PROPERTIES PREFIX "")
+set_target_properties(ini_mod       PROPERTIES PREFIX "")
+set_target_properties(selectors_mod PROPERTIES PREFIX "")
