--- a/.github/workflows/ubuntu-build-extensions.yml
+++ b/.github/workflows/ubuntu-build-extensions.yml
@@ -39,6 +39,16 @@ jobs:
         ./configure
         make
         sudo make install
+    - name: Installing dependency raylib
+      run: |
+        sudo apt install build-essential
+        sudo apt install libasound2-dev libx11-dev libxrandr-dev libxi-dev libgl1-mesa-dev libglu1-mesa-dev libxcursor-dev libxinerama-dev
+        git clone https://github.com/raysan5/raylib.git
+        cd raylib
+        mkdir build && cd build
+        cmake -DBUILD_SHARED_LIBS=OFF -DCMAKE_POSITION_INDEPENDENT_CODE=ON ..
+        make
+        sudo make install
     - name: Configure CMake
       run: |
         cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=Debug -DBUILD_EXTENSIONS=1
