--- a/extensions/CMakeLists.txt
+++ b/extensions/CMakeLists.txt
@@ -17,7 +17,7 @@ if(MSVC)
   find_package(libmysql REQUIRED)
 endif()
 
-if (MSVC)
+if(MSVC)
   include_directories("C:/Program Files (x86)/hiredis/include")
   link_directories("C:/Program Files (x86)/hiredis/lib")
   include_directories("C:/vcpkg/packages/fastcgi_x86-windows/include/fastcgi")
@@ -25,30 +25,22 @@ if (MSVC)
 endif()
 
 if(APPLE)
-  execute_process(
-    COMMAND arch
-    OUTPUT_VARIABLE ARCHITECTURE
-    OUTPUT_STRIP_TRAILING_WHITESPACE
-  )
-  if(${ARCHITECTURE} STREQUAL "arm64")
-    include_directories(/opt/homebrew/opt/mysql-client/include)
-    link_directories(/opt/homebrew/opt/mysql-client/lib)
-    include_directories(/opt/homebrew/opt/fcgi/include)
-    link_directories(/opt/homebrew/opt/fcgi/lib)
-    include_directories(/opt/homebrew/opt/gmp/include)
-    link_directories(/opt/homebrew/opt/gmp/lib)
-    include_directories(/opt/homebrew/opt/zeromq/include)
-    link_directories(/opt/homebrew/opt/zeromq/lib)
-    include_directories(/opt/homebrew/opt/leveldb/include)
-    link_directories(/opt/homebrew/opt/leveldb/lib)
-    include_directories(/opt/homebrew/opt/openssl/include)
-    link_directories(/opt/homebrew/opt/openssl/lib)
-    include_directories(/opt/homebrew/opt/pcre/include)
-    link_directories(/opt/homebrew/opt/pcre/lib)
-  else()
-    include_directories(/usr/local/opt/mysql-client/include)
-    link_directories(/usr/local/opt/mysql-client/lib)
-  endif()
+  include_directories(/opt/homebrew/opt/mysql-client/include)
+  link_directories(/opt/homebrew/opt/mysql-client/lib)
+  include_directories(/opt/homebrew/opt/fcgi/include)
+  link_directories(/opt/homebrew/opt/fcgi/lib)
+  include_directories(/opt/homebrew/opt/gmp/include)
+  link_directories(/opt/homebrew/opt/gmp/lib)
+  include_directories(/opt/homebrew/opt/zeromq/include)
+  link_directories(/opt/homebrew/opt/zeromq/lib)
+  include_directories(/opt/homebrew/opt/leveldb/include)
+  link_directories(/opt/homebrew/opt/leveldb/lib)
+  include_directories(/opt/homebrew/opt/openssl/include)
+  link_directories(/opt/homebrew/opt/openssl/lib)
+  include_directories(/opt/homebrew/opt/pcre/include)
+  link_directories(/opt/homebrew/opt/pcre/lib)
+  include_directories(/opt/homebrew/opt/raylib/include)
+  link_directories(/opt/homebrew/opt/raylib/lib)
 endif()
 
 add_library(sqlite_mod SHARED
@@ -107,6 +99,10 @@ add_library(geohash_mod SHARED
   "deps/geohash.c"
 )
 
+add_library(raylib_mod SHARED
+  "raylib_mod.c"
+)
+
 target_link_libraries(sqlite_mod    ${STATIC_LIB_TARGET})
 target_link_libraries(curl_mod      ${STATIC_LIB_TARGET})
 target_link_libraries(redis_mod     ${STATIC_LIB_TARGET})
@@ -120,6 +116,7 @@ target_link_libraries(crypto_mod    ${STATIC_LIB_TARGET})
 target_link_libraries(regex_mod     ${STATIC_LIB_TARGET})
 target_link_libraries(uuid_mod      ${STATIC_LIB_TARGET})
 target_link_libraries(geohash_mod   ${STATIC_LIB_TARGET})
+target_link_libraries(raylib_mod    ${STATIC_LIB_TARGET})
 
 set_target_properties(sqlite_mod    PROPERTIES PREFIX "")
 set_target_properties(curl_mod      PROPERTIES PREFIX "")
@@ -134,6 +131,7 @@ set_target_properties(crypto_mod    PROPERTIES PREFIX "")
 set_target_properties(regex_mod     PROPERTIES PREFIX "")
 set_target_properties(uuid_mod      PROPERTIES PREFIX "")
 set_target_properties(geohash_mod   PROPERTIES PREFIX "")
+set_target_properties(raylib_mod    PROPERTIES PREFIX "")
 
 if(MSVC)
   target_link_libraries(sqlite_mod  PRIVATE SQLite::SQLite3)
@@ -158,3 +156,4 @@ endif()
 target_link_libraries(redis_mod   hiredis)
 target_link_libraries(fastcgi_mod fcgi)
 target_link_libraries(bigint_mod  gmp)
+target_link_libraries(raylib_mod  raylib)
